tests/fixtures/valid/operator_bool_logic.torel
unit fixtures.operator_bool_logic;

export proc main() -> Bool {
    true && !false
}
