tests/fixtures/invalid/operator_and_int_bool.torel
unit fixtures.operator_and_int_bool;

export proc main() -> Bool {
    1 && true
}
